# terrain-generation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.cmake
Perlin/: CMakeLists.txt
Perlin/res/shader/: blocktypes.glsl  fbm.comp  fbm.glsl  noise.frag  noise.vert  perlin.glsl  phong.glsl  quad.frag  quad.vert  terrain.comp  terrain.frag  terrain.vert
Perlin/src/: gui.c  gui.h  input.c  input.h  macros.h  main.c  mesh.c  mesh.h  scene.c  scene.h  shader.c  shader.h
lib/include/fhwcg/: allocator.h  camera.h  common.h  debug.h  disabled.h  fhwcg.h  font.h  gui.h  mesh.h  nuklear.h  scene.h  shader.h  stb_ds.h  stb_image.h  stb_include.h  stb_truetype.h  texture.h  utils.h  ves.h  window.h
lib/include/glad/: glad.h
lib/include/nuklear/: nuklear.h  nuklear_glfw_gl4.h
lib/shader/color/: color.frag  color.vert
lib/shader/normals/: normals.frag  normals.geom  normals.vert
